style: z-index fix

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
   position: fixed;
   left: 0;
   width: 100vw;
-  z-index: 999;
+  z-index: 9999;
   color: $text;
 
   .container {
