--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -21,7 +21,7 @@
       0px 10px 10px -5px rgba(0, 0, 0, 0.04);
     border-radius: 50% 50% 50% 50% / 0% 0% 6% 6%;
     position: relative;
-    z-index: 9999;
+    z-index: 9998;
 
     @media (max-width: $small) {
       translate: 0 5vh;
